--- a/css/scss/partials/_mediaqueries.scss
+++ b/css/scss/partials/_mediaqueries.scss
@@ -27,14 +27,20 @@
 
 @for $i from 0 through 30 {
   @media (min-width: 19.375em + ($i * 1.875em)) {
+    nav {
+      width: 19.375em + ($i / 1 );
+      li {
+      width: ((19.375em + ($i / 1)) / 4);
+      }
+    }
     header h1 {
       font-size: 1.4em + ($i / 10);
     //  @include transition(font-size 0.2s linear);
     }
-  #about img {
-    margin-top: .5em + ($i / 10);
-    width: 8em + ($i / 6);
-   // @include transition(width 0.2s linear, margin-top 0.2s linear);
+    #about img {
+      margin-top: .5em + ($i / 10);
+      width: 8em + ($i / 6);
+    // @include transition(width 0.2s linear, margin-top 0.2s linear);
     }
   }
 }
