--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -80,6 +80,7 @@ nav {
       text-transform: uppercase;
       font-weight: 700;
       color: rgb(26, 74, 116);
+      padding: 0;
     }
     a:hover, a:focus {
       background: none;
